# Muwubot

./: .env.example  .gitignore  README.md  bank.py  credentials.py  level.py  main.py  pyproject.toml  uwubank.json  uwulevels.json  uwuplayercharts.json  uwustatus.json
cogs/: gamble.py  general.py  main.py  statusmodal.py  valorant.py  welcome.py
