[tool.poetry]
name = "Muwubot"
version = "0.1.0"
description = "uwu"
authors = ["Vivian Luong, Andrew Le"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4"
discord-py = "^2.3.2"
easy-pil = "^0.3.3"
pytz = "^2024.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"